<resources>
    <string name="app_name">LightFinder</string>
    <string name="light_finder">LightFinder</string>
    <string name="cart">My Cart</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch flash</string>
    <string name="text_enable_access">Enable camera access</string>
    <string name="text_how_it_works">How it works</string>
    <string name="text_permissions_subtitle">Enable camera access to get the best recommendations for your light bulb replacement.</string>
    <string name="text_permissions_title">Identify a light bulb</string>
    <string name="text_camera_subtitle">Hold light bulb in screen, ensuring as much is in view as possible</string>
    <string name="text_browse_button">Browse light bulbs</string>
    <string name="lightbulb_cd">lightBulb</string>
    <string name="settings_cd">settings</string>
    <string name="text_identifying">Identifying…</string>
    <string name="identify_cd">identify</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_results">%d results</string>
    <string name="text_result">%d result</string>
    <string name="category_price">From %s each</string>
    <string name="text_no_internet_connection_cart">No internet connection found.\nPlease check your connection.</string>
    <string name="most_efficient_option">Most energy efficient</string>
    <string name="description">Description</string>
    <string name="price_per_pack">$%.2f</string>
    <string name="price_per_pack_analytics">%.2f</string>
    <string name="price_detail">/ $%.2f each</string>
    <string name="wattage_variation">%sW</string>
    <string name="intensity_title">Intensity:</string>
    <string name="scan_completed">Scan completed</string>
    <string name="scan_completed_tip">Check the scan result and choose the type of product that fits your needs:</string>
    <string name="select_button">Select</string>
    <string name="wattage_detail">%sW %s</string>
    <string name="live_preview_button_text">Live preview</string>
    <string name="live_preview_disabled_button_text">Preview not available</string>
    <string name="try_again">Try again</string>
    <string name="unidentified">No light bulb identified</string>
    <string name="timeout_sub">That took longer than expected.</string>
    <string name="unidentified_sub">We\'re struggling to recognize a light bulb in the image.</string>
    <string name="ok">OK</string>
    <string name="oops">Oops</string>
    <string name="bulb_not_available">%s %s not available</string>
    <string name="error_sub">Sorry. We’re having an issue connecting to our internal server. Please try again later.</string>
    <string name="error_sub_not_available">Sorry. We recognized your \'%s %s\' light bulb, but unfortunately we don’t have this product for sale. </string>
    <string name="not_now">Not now</string>
    <string name="help_me_scan">Help me scan</string>
    <string name="enable_camera_access">Enable camera access</string>
    <string name="enable_gallery_access">LightFinder wants to access your photos</string>
    <string name="enable_live_preview_access">LightFinder wants to access your camera</string>
    <string name="enable_subtitle">To identify your light bulb using LightFinder, please enable camera permissions in Settings.</string>
    <string name="enable_gallery_subtitle">This way, you can use a photo to find an exact match or recommendation.</string>
    <string name="enable_live_preview_subtitle">This way, you can see how the color temperature would look in your own environment.</string>
    <string name="product_not_found_description">The product cannot be added. Please try again at a later time. (404)</string>
    <string name="out_of_stock_description">This product is sold out. We are working to refill the warehouse. (422)</string>
    <string name="product_disable_description">The product cannot be added. Please try again at a later time. (424)</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="enable_camera_button">Go to Settings</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="adding_to_cart">Adding to cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_cart">My Cart</string>
    <string name="got_it">Got it</string>
    <string name="how_to_position">Distance</string>
    <string name="ensure_whole">Put the light bulb on a flat surface with enough light. Keep about 1 foot distance.</string>
    <string name="how_to_hold">Entirely visible</string>
    <string name="hold_light">Make sure the light bulb is entirely visible and in focus.</string>
    <string name="badge_plus_100">99+</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="continue_terms">Continue</string>
    <string name="see_details">See details</string>
    <string name="privacy_notice">Privacy Notice</string>
    <string name="i_agree_with_the">I agree with the</string>
    <string name="terms_of_use_text">Terms of Use</string>
    <string name="share_my_usage_data_to_help_improve_the_app">Consent to share my usage data to help improve the app, and data with social media and other providers to receive targeted Signify advertisements. See Cookie Notice</string>
    <string name="cookie_notice_text">Cookie Notice</string>
    <string name="privacy_note">We respect your privacy. By using the app your personal data will be processed in accordance with our Privacy Notice</string>
    <string name="_2020_signify_holding_all_rights_reserved">© 2020 Signify Holding. All rights reserved.</string>
    <string name="version">Version</string>
    <string name="lightfinder">LightFinder</string>
    <string name="about">About</string>
    <string name="about_to_leave">You\'re about to leave the app</string>
    <string name="will_be_opened">The link will be opened in the browser.</string>
    <string name="the_easiest_way_to_the_best_lighting">The easiest way to the best lighting</string>
    <string name="camera_permission">CameraPermission</string>
    <string name="camera_feed">CameraFeed</string>
    <string name="camera_loading">CameraLoading</string>
    <string name="product_results">ScanResults</string>
    <string name="product_details">ProductDetailScreen</string>
    <string name="my_cart_fire">MyCart</string>
    <string name="about_page">AboutPage</string>
    <string name="gallery_preview">ConfirmSelectedPhoto</string>
    <string name="cancel_identified_event">cancel_identify</string>
    <string name="lightbulb_identified_event">lightbulb_identified</string>
    <string name="no_lightbulb_identified_event">no_lightbulb_identified</string>
    <string name="source">source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="browse_open">browse_open</string>
    <string name="send_photo">send_photo</string>
    <string name="browse_applied">browse_applied</string>
    <string name="lightbulb_identified_but_no_products">identified_but_no_products</string>
    <string name="error_reason_event">error_reason</string>
    <string name="time_out_event">timeout</string>
    <string name="api_server_error_event">api_server_error</string>
    <string name="no_internet_connection_event">no_internet_connection</string>
    <string name="base">base</string>
    <string name="shape">Shape</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="open_terms_of_use">open_terms_of_use</string>
    <string name="open_privacy_notice">open_privacy_notice</string>
    <string name="payment_successful">payment_successful</string>
    <string name="no_internet_banner">no_internet_banner</string>
    <string name="parameter_sku">sku</string>
    <string name="photo_help">photo_help_tips</string>
    <string name="sorry">Sorry</string>
    <string name="cannot_added">The product cannot be added. Please try again at a later time.</string>
    <string name="_8">8</string>
    <string name="add_to_cart_error">add_to_cart_error</string>
    <string name="product_not_found_event_tag">product_not_found</string>
    <string name="product_disabled_event_tag">product_disabled</string>
    <string name="out_of_stock_event_tag">out_of_stock</string>
    <string name="CES_campaign">CES_campaign</string>
    <string name="submitted_event">submitted</string>
    <string name="dismissed_event">dismissed</string>
    <string name="sticky_header_price">$%.2f</string>
    <string name="no_results">No Results</string>
    <string name="no_result_sub">We couldn\'t find any matches with your search. Adjust your search by changing the fitting, shape or by removing filters.</string>
    <string name="based_on_result_fitting">Based on: %s fitting</string>
    <string name="_0_00_0_00_each">$0.00-$0.00 each</string>
    <string name="available_options">Available options:</string>
    <string name="bulb_s">%s (%s)</string>
    <string name="error_browse">Oops</string>
    <string name="something_went_wrong">Something went wrong.\nPlease refresh or try again later.</string>
    <string name="refresh">Refresh</string>
    <string name="which_fitting_do_you_need">Which fitting\ndo you need?</string>
    <string name="which_shape_do_you_need">Which shape\ndo you need?</string>
    <string name="fitting">Fitting</string>
    <string name="reset"><u>Reset</u></string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="skip">Skip</string>
    <string name="not_available">Not available for this fitting</string>
    <string name="not_available_choice">Not available for this fitting and shape</string>
    <string name="what_type_of_light_do_you_prefer">What category do you need?</string>
    <string name="product_category">Product category</string>
    <string name="facebook_app_id">2579741185672513</string>
    <string name="value">value</string>
    <string name="view_product">view_product</string>
    <string name="view_product_fb">ViewContent</string>
    <string name="add_to_cart_fb">AddToCart</string>
    <string name="add_to_cart_tag">add_to_cart</string>
    <string name="payment_successful_fb">Purchase</string>
    <string name="faq">FAQ</string>
    <string name="price_high_low">Price High - Low</string>
    <string name="price_low_high">Price Low - High</string>
    <string name="recommended">Recommended</string>
    <string name="sort_by">Sort by</string>
    <string name="browse_sort_results">browse_sort_results</string>
    <string name="identify_a_lightbulb">Identify a lightbulb</string>
    <string name="color">Color:</string>
    <string name="finish">Finish:</string>
    <string name="intensity">Intensity</string>
    <string name="connection_type">Connection type:</string>
    <string name="intensity_text">Most people think that the wattage (W) of a bulb tells you how much light it gives. But wattage only tells you how much power a bulb uses. The light output of a bulb is actually measured in lumen (lm).\n\n
As we know that lumen might be new to you, we want to make it easy for you to find the right replacement bulb. So therefore, we show the equivalent wattage value of a classic bulb. The higher the wattage (equivalent), the brighter the light.</string>
    <string name="color_text">LED bulbs oﬀer light in a range of color temperatures, it’s what makes light feel ‘warm’ or ‘cool’. Color temperature is measured by Kelvin (K). A lower color temperature produces a warmer, more relaxing light. A higher color temperature emits a cooler, more refreshing light. For example, ‘Warm Glow’ is 2200K and ‘Daylight’ is 5000K. ‘Soft White’ tones help create a more relaxing mood or a cosy atmosphere. Use ‘Daylight’ to create a bright energizing setting.</string>
    <string name="something_wrong">Something went wrong.</string>
</resources>