<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundDark"
    android:layout_marginTop="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_browse_error">

    <TextView
        android:id="@+id/textBrowseErrorTitle"
        android:textColor="@color/textLight"
        android:textSize="24sp"
        android:fontFamily="@font/bold"
        android:text="@string/error_browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textBrowseErrorSubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:textColor="@color/backgroundLight"
        android:textSize="12sp"
        android:fontFamily="@font/book"
        android:textAlignment="center"
        android:id="@+id/textBrowseErrorSubTitle"
        android:minLines="2"
        android:text="@string/something_went_wrong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRefresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBrowseErrorTitle" />


    <Button
        android:id="@+id/buttonRefresh"
        style="@style/TitleTextGray"
        android:stateListAnimator="@null"
        android:background="@drawable/button_curvy_corners"
        android:textAllCaps="false"
        android:text="@string/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBrowseErrorSubTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>